--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,8 @@
     "@tanstack/react-query": "^5.17.19",
     "recharts": "^2.12.0",
     "reactflow": "^11.10.4",
+    "d3": "^7.8.5",
+    "@types/d3": "^7.4.3",
     "lucide-react": "^0.323.0",
     "clsx": "^2.1.0",
     "react-syntax-highlighter": "^15.5.0",
